Not ready yet:

[ CORE. Support for automake ]

[ CORE. Support for Service Tree ] 

[ CORE. Make Zabbix compile by cc ]

[ PHP. Show diff instead of real values ]
[ PHP. Show triggers by userid ]

[ CORE. Add support for new trigger statuses: NOTSUPORTED ]

[ DOCS. All parameters should contain section "How can be used" in the Manual ]

Changes for 1.0beta4:

 - protection from items.delay set to 0 (Alexei)
 - values provided by an agent can be less than zero (Alexei)

Changes for 1.0beta3:

 - support for chart showing diff instead of real values (Alexei)
 - support for new trigger status - UNKNOWN (Alexei)
 - zabbix_suckerd housekeeping process to disconnect from 
 DB when unactive (Alexei)
 - support for check_service[http] (Alexei)
 - drop column config.password_required (Alexei)
 - drop column users.groupid (Alexei)
 - drop table groups (Alexei)
 - added parameter DBConnectOnEach for zabbix_trapperd (Alexei)
 - added default user "guest" (Alexei)
 - more support for flexible permissions (Alexei)
 - added support for Inverse Select in status of triggers (Alexei)
 - added support for flexible permissions (Alexei)
 - fixed items.php (Alexei)
 - added table 'rights' (Alexei)
 - added time legend for simple graph (Alexei)
 - already existing hosts can be used as template from new host (Alexei)
 - new algorithm for audible notification in screen "Status of Triggers"
 (Alexei)
 - changed definition of DebugLevel (Alexei)
 - improved update_triggers() (Alexei)
 - fixed get_lastvalue() (Alexei)
 - minor changes in include/cfg.c (Alexei)
 - column functions.lastvalue changed to varchar(255) (Alexei)
 - column items.lastvalue changed to varchar(255) (Alexei)
 - column items.prevvalue changed to varchar(255) (Alexei)
 - support for version[zabbix_agent] (Alexei)
 - better validation of trigger expressions in validate_expression
 (Alexei)
 - common parser of config files in include/cfg.c (Alexei)
 - added column value_type to table items_template (Alexei)